--- a/css/style.scss
+++ b/css/style.scss
@@ -124,6 +124,7 @@ body {
         margin-bottom: 20px;
         .date{
             font-size: 60px;
+            line-height: 60px;
             color: $main;
             font-family: "MonotypeCorsiva";
         }
@@ -183,8 +184,8 @@ body {
 }
 
 .avatar{
-    width: 200px;
-    height: 200px;
+    width: 120px;
+    height: 120px;
     border-radius: 50%;
     border: 5px solid #fff;
     box-shadow: 0px 3px 10px rgba(#000,0.2);
@@ -220,7 +221,7 @@ body {
         color: $main;
         font-family: "UTMViceroyJF";
         display: block;
-        margin-bottom: 10px;
+        margin-bottom: 5px;
         font-size: 30px;
     }
     .map{
